@@ -1,4 +1,6 @@
 0.07
+    - Make start/end expressions only start/end sentences most of the time
+      instead of all the time
     - Issue #13: `hailo -b brain' will launch an interactive ReadLine
       terminal
     - Don't exit() on print_version=> in run(), just return()
